# flowmatch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
benches/: README.md  pairing.rs  realdata_torsions.rs  realdata_usgs.rs
docs/: ROADMAP.md
examples/: README.md  burn_rfm_minibatch_ot_linear.rs  burn_sd_fm_semidiscrete_linear.rs  discrete_ctmc_path_evolution.rs  fynch_bregman_energy.rs  mmd_flow_eval.rs  ode_comparison.rs  ot_cfm_training_loop.rs  profile_breakdown_torsions.rs  profile_breakdown_usgs.rs  rfm_conditional_2d.rs  rfm_fisher_simplex.rs  rfm_minibatch_ot_linear.rs  rfm_minibatch_outlier_partial.rs  rfm_poincare_geodesic_ode.rs  rfm_protein_torsions_1bpi.rs  rfm_textish_tokens.rs  rfm_torsions_nfe_curve.rs  rfm_two_moons.rs  rfm_usgs_earthquakes_cluster_mass.rs  rfm_usgs_earthquakes_sphere.rs  rfm_usgs_full_pipeline_report.rs  rfm_usgs_knn_leiden.rs  rfm_usgs_nfe_curve.rs  rfm_usgs_solver_nfe_tradeoff.rs  riemannian_fm_poincare.rs  sd_fm_semidiscrete_linear.rs
examples/common/: mod.rs  textish.rs  torsions.rs  usgs.rs
examples_data/: pdb_1bpi_phi_psi.csv.txt  usgs_eq_m6_2024_limit50.csv.txt
proptest-regressions/: ode.txt  rfm.txt  riemannian_ode.txt
src/: burn_euclidean.rs  burn_sd_fm.rs  discrete_ctmc.rs  energy.rs  flow.rs  lib.rs  linear.rs  metrics.rs  non_euclidean.rs  ode.rs  ot_cfm.rs  rfm.rs  riemannian.rs  riemannian_ode.rs  sd_fm.rs  simplex.rs
tests/: degenerate_inputs.rs  fisher_flow_rfm.rs  nfe_convergence_usgs.rs  ode_convergence_order.rs  ot_coupling_properties.rs  rfm_minibatch_ot_e2e.rs  rfm_textish_tokens_ot_e2e.rs  rfm_usgs_cluster_mass_e2e.rs  rfm_usgs_leiden_exact_knn_e2e.rs  sd_fm_assignment_strategy_e2e.rs  sd_fm_codebook_weights_e2e.rs  sd_fm_semidiscrete_e2e.rs  sd_fm_textish_tokens_e2e.rs  trajectory_straightness_usgs.rs
