[package]
name = "flowmatch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = true

[features]
# Default build stays `ndarray`-only; `burn` is an opt-in training backend path.
default = []
burn = [
    "dep:burn-core",
    "dep:burn-autodiff",
    "dep:burn-ndarray",
    "dep:burn-nn",
    "dep:burn-optim",
]

[dependencies]
thiserror = "2.0"
ndarray = "0.16"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
logp = { git = "https://github.com/arclabs561/logp" }
wass = { git = "https://github.com/arclabs561/wass" }
skel = { git = "https://github.com/arclabs561/skel" }
burn-core = { version = "0.20.0", default-features = false, features = ["std"], optional = true }
burn-autodiff = { version = "0.20.0", default-features = false, features = ["std"], optional = true }
burn-ndarray = { version = "0.20.0", default-features = true, optional = true }
burn-nn = { version = "0.20.0", default-features = false, features = ["std"], optional = true }
burn-optim = { version = "0.20.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
petgraph = "0.6"
hyp = { git = "https://github.com/arclabs561/hyp", branch = "master" }

[[bench]]
name = "realdata_torsions"
harness = false

[[bench]]
name = "pairing"
harness = false

